--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=healthmgmtsvc
 server.port=8081
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=master
+spring.datasource.username= sa
+spring.datasource.password= Sandesh12345@
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto= update
