--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=healthmgmtsvc
 server.port=8081
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=master
+spring.datasource.url= jdbc:sqlserver://localhost:1433;trustServerCertificate=true;encrypt=true;databaseName=model
 spring.datasource.username= sa
 spring.datasource.password= Sandesh12345@
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
