--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,14 @@ spring.application.name=healthmgmtsvc
 server.port=8081
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.url= jdbc:sqlserver://localhost:1433;trustServerCertificate=true;encrypt=true;databaseName=model
-spring.datasource.username= sa
-spring.datasource.password= Sandesh12345@
+#spring.datasource.url= jdbc:sqlserver://localhost:1433;trustServerCertificate=true;encrypt=true;databaseName=model
+#spring.datasource.username= sa
+#spring.datasource.password= Sandesh12345@
+
+spring.datasource.url= jdbc:sqlserver://healthmanagementportal.database.windows.net:1433;database=healthmanagement
+spring.datasource.username= sqlserver@healthmanagementportal
+spring.datasource.password= collegeproject-11
+#  ;user=sqlserver@healthmanagementportal;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto= update
