--- a/front-end/healthmgmt-app/package.json
+++ b/front-end/healthmgmt-app/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start --proxy-config proxy.dev.json",
+    "prod": "react-scripts start --proxy-config proxy.prod.json"
   },
   "eslintConfig": {
     "extends": [
